artifacthub/library/general/ephemeralstoragelimit/1.0.2/samples/container-must-have-ephemeral-storage-limit/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sContainerEphemeralStorageLimit
metadata:
  name: container-ephemeral-storage-limit
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    ephemeral-storage: "500Mi"
